devstat (0.3.2)

  * option added to output in format more convenient for parsing

-- Mikolaj Golub <to.my.trociny@gmail.com> 2010/07/18

devstat (0.3.1)

  * some spell errors corrected

-- Mikolaj Golub <to.my.trociny@gmail.com> 2009/07/07

devstat (0.3)

  * NetBSD support added

-- Mikolaj Golub <to.my.trociny@gmail.com> 2009/07/05

devstat (0.2)

  * option added to extract statistics from core file

-- Mikolaj Golub <to.my.trociny@gmail.com> 2008/05/17

devstat (0.1)

  * initial version

-- Mikolaj Golub <to.my.trociny@gmail.com> 2008/04/12